<resources>
    <string name="app_name">Tour Guide</string>
    <string name="tab_text_1">Spots</string>
    <string name="tab_text_2">Food</string>
    <string name="tab_text_3">INFO</string>
    <string name="tab_text_4">Direction</string>
    <string name="action_settings">Settings</string>
    <string name="orcha_info">Orchha is famous tourist place of bundelkhand.Orchha is town in Tikamgarh district which was established by Bundela chief, Rudra Pratap Singh.</string>
    <string name="orchha_str">Orchha</string>
    <string name="Jhansi_info">At a distance of 4 km from Jhansi Junction, Jhansi Fort or Jhansi ka Kila is an ancient and historical fortress situated in the heart of Jhansi, Uttar Pradesh.</string>
    <string name="jhansi_str">Jhansi Fort</string>
    <string name="khajuraho_info">Khajuraho is a town in the Indian state of Madhya Pradesh, located in Chhatarpur District.One of the most popular tourist destinations in India.</string>
    <string name="khajuraho_str">Khajuraho</string>
    <string name="chitrakoot_str">Chitrakoot</string>
    <string name="chittrakoot_str">Chitrakoot is a town in the Satna district in the state of Madhya Pradesh, India. It is a town of religious, cultural, historical, situated in the Bundelkhand region.</string>
    <string name="tap_for_info_str">Tap for info</string>
    <string name="trans_name">imagetrans</string>
    <string name="haveli_address_str">Jhokan Bagh, Jhansi, Uttar Pradesh</string>
    <string name="haveli_restaurant_str">Haveli Restaurant</string>
    <string name="baker_factory_str">The Bakers Factory</string>
    <string name="baker_factory_address_str">Near Allahabad Bank, Station Road, Civil Lines, Jhansi</string>
    <string name="ramraja_str">Ramraja restaurant</string>
    <string name="ramraja_address_str">Orchha Palace Road,Orchha</string>
    <string name="safari_str">Safari Canteen</string>
    <string name="safari_address_str">Sevagram, Khajuraho, Madhya Pradesh</string>
    <string name="temple_str">Temple Cafe</string>
    <string name="temple_address_str">Radisson Hotel Khajuraho,By pass road, Khajuraho</string>
    <string name="icons_str">icons</string>
    <string name="ideal_trip_duration_str">Ideal Trip Duration:</string>
    <string name="nearest_city_str">Nearest City</string>
    <string name="best_time_to_visit">Best Time to Visit</string>
    <string name="state_str">State</string>
    <string name="peak_season_str">Peak Season</string>
    <string name="weather_str">Weather</string>
    <string name="jhansi_weather_str">Summer: Max 42° C and Min 19°C\nWinter: Max 32° C and Mini 8° C</string>
    <string name="place_to_visit_10">10 place to visit</string>
    <string name="place_to_visit_3">3 place to visit</string>
    <string name="place_to_visit_6">6 place to visit</string>
    <string name="jhansi_best_time_visit_str">October to March</string>
    <string name="jhansi_str_name">Jhansi</string>
    <string name="state_up_str">Uttar Pradesh</string>
    <string name="peak_season_jhansi">November to February</string>
    <string name="trip_time_1_2_days">1–2 days</string>
    <string name="bestTimeKey">BestTime</string>
    <string name="season_key">Season</string>
    <string name="TripdurationKey">TripDuration</string>
    <string name="state_key">State</string>
    <string name="weather_key">Weather</string>
    <string name="nearest_key">NearestCity</string>
    <string name="nearest_city_orchha_str">Jhansi (16 Kms)</string>
    <string name="orchaa_state_str">Madhya Pradesh | District: Tikamgarh</string>
    <string name="peak_season_orchha_str">November to January</string>
    <string name="orchha_trip_duration">Full Day</string>
    <string name="orchha_waether_str">Summer: Max 42°C and Min - 20°C\nWinter: Max 30°C and Min 7°C</string>
    <string name="placeNameKey">PlaceName</string>
    <string name="khajuraho_best_time_visi_strt">September to March</string>
    <string name="khajuraho_nearest_city_str">Kanpur (223 Kms), Gwalior (283 Kms)</string>
    <string name="khajuraho_state_str">Madhya Pradesh | District: Chhatarpur</string>
    <string name="khajuraho_peak_season_str">November to February</string>
    <string name="khajuraho_trip_duration">2 Full Days</string>
    <string name="khajuraho_weather_str">Summer: Max 47°C and Min 21°C\nWinter: Max 27°C and Mini 4°C</string>
    <string name="placeImageKey">PlaceImage</string>
    <string name="toolbarImageTransitionName">toolbarImage</string>
    <string name="click_to_view_map_str">click to view on map</string>
    <string name="urlformap">http://maps.google.co.in/maps?q=</string>
    <string name="t_key">T</string>
    <string name="i_key">I</string>
    <string name="id_image_key">ID</string>
    <string name="image_of_place_content_desc">image of place</string>

</resources>
