<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.hasanzian.tourguide.InformationDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@null"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/toolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_of_place_content_desc"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/toolbarImageTransitionName"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/jhansi" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorIcons"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/LinearLayoutDetailInfo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headertext"
                style="@style/Header"
                tools:text="About Jhansi" />

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_1"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/clock_outline" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_1"
                            style="@style/TextViewCommon"
                            android:text="@string/ideal_trip_duration_str" />

                        <TextView
                            android:id="@+id/trip_duration"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="1-2 Days" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_2"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/city" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_2"
                            style="@style/TextViewCommon"
                            android:text="@string/nearest_city_str" />

                        <TextView
                            android:id="@+id/nearest_city"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="1-2 Days" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_3"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/road_variant" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_3"
                            style="@style/TextViewCommon"
                            android:text="@string/best_time_to_visit" />

                        <TextView
                            android:id="@+id/best_time_to_visit"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="1-2 Days" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_4"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/wallet_travel" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_4"
                            style="@style/TextViewCommon"
                            android:text="@string/peak_season_str" />

                        <TextView
                            android:id="@+id/peak_season"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="1-2 Days" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_5"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/map_marker_black" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_5"
                            style="@style/TextViewCommon"
                            android:text="@string/state_str" />

                        <TextView
                            android:id="@+id/state"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="4dp"
                            tools:text="1-2 Days" />

                        <View style="@style/ViewDivider" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewDetailInfo"
                app:cardBackgroundColor="@color/colorIcons">

                <LinearLayout style="@style/LinearLayoutDetailInfo">

                    <ImageView
                        android:id="@+id/icon_6"
                        style="@style/ImageViewCommon"
                        android:contentDescription="@string/icons_str"
                        android:src="@drawable/thermometer" />

                    <LinearLayout
                        style="@style/LinearLayoutDetailInfo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_6"
                            style="@style/TextViewCommon"
                            android:text="@string/weather_str" />

                        <TextView
                            android:id="@+id/weather"
                            style="@style/TextViewCommon"
                            android:layout_marginTop="@dimen/margin_4dp"
                            tools:text="@string/jhansi_weather_str" />

                        <View style="@style/ViewDivider" />


                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>