<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c4"
    android:orientation="vertical">


        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:id="@+id/background_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

           <ImageView
               android:id="@+id/image"
               android:layout_width="match_parent"
               android:layout_height="@dimen/image_item_height_200dp"
               android:contentDescription="@string/app_name"
               android:scaleType="fitXY"
               android:src="@drawable/orcha_place_compress"
               android:transitionName="@string/trans_name"
               />
          <TextView
              android:id="@+id/main_tx"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/image"
              android:layout_marginStart="@dimen/marigin_16dp"
              android:layout_marginTop="@dimen/margin_8dp"
              android:textColor="@color/c4"
              android:textSize="@dimen/textview_size_20sp"
              tools:text="Hello"

              />

                <TextView
                    android:id="@+id/sub_tx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_tx"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/marigin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:maxLines="3"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize_12sp"
                    tools:text="@string/orcha_info"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>