<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:cardCornerRadius="@dimen/margin_8dp"
        app:cardElevation="@dimen/margin_4dp"
        tools:style="cardViewStyle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/hotel_image"
                style="@style/FoodItemImage"
                android:contentDescription="@string/image_of_place_content_desc"
                tools:src="@drawable/haveli" />

            <View
                android:id="@+id/fadeBackgroudView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/view_food_item_80dp"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/hotel_image"
                android:layout_marginTop="@dimen/food_margin_top_120dp"
                android:foreground="@drawable/gradient" />

            <TextView
                android:id="@+id/hotel_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/marigin_16dp"
                android:layout_marginTop="@dimen/food_margin_top_150dp"
                android:textColor="@color/colorIcons"
                tools:text="@string/haveli_restaurant_str" />

            <TextView
                android:id="@+id/hotel_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/marigin_16dp"
                android:layout_marginTop="@dimen/food_margin_top_170dp"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/textsize_12sp"
                tools:text="@string/haveli_address_str" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>